--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,6 +1,9 @@
 {{> partials/head.html}}
-{{> partials/form.html}}
-{{> partials/result-kallorii.html}}
-{{> partials/table-menu.html}}
-{{> partials/list-of-products.html}}
+<div class="container mt-5 mb-5">
+    <h1>Application für die Menschen, die sich selbst fit halten müssen/wollen!</h1>
+    {{> partials/form.html}}
+    {{> partials/result-kallorii.html}}
+    {{> partials/table-menu.html}}
+    {{> partials/list-of-products.html}}
+</div>
 {{> partials/footer.html}}
