--- a/app/partials/footer.html
+++ b/app/partials/footer.html
@@ -1,3 +1,5 @@
 <script src="js/script.min.js" type="application/javascript"></script>
+<div class="lightbox" style="display: none;"></div>
+<div class="modal" style="display: none;"></div>
 </body>
 </html>
