--- a/src/templates/partials/footer.html
+++ b/src/templates/partials/footer.html
@@ -1,3 +1,5 @@
 {{> js.html}}
+<div class="lightbox" style="display: none;"></div>
+<div class="modal" style="display: none;"></div>
 </body>
 </html>
