--- a/src/templates/partials/form.html
+++ b/src/templates/partials/form.html
@@ -1,12 +1,77 @@
-<form>
+<form class="shadow p-3 mb-5 bg-white rounded">
     <div class="form-row">
         <div class="form-group col-6">
-            <label for="vorname">Vorname</label>
-            <input type="text" class="form-control" id="vorname" placeholder="Vorname">
+            <label for="vorname">Vorname</label> <input type="text" class="form-control" id="vorname" name="vorname" placeholder="Vorname">
         </div>
         <div class="form-group col-6">
-            <label for="nachname">Nachname</label>
-            <input type="text" class="form-control" id="nachname" placeholder="Nachname">
+            <label for="nachname">Nachname</label> <input type="text" class="form-control" id="nachname" name="nachname" placeholder="Nachname">
+        </div>
+    </div>
+    <div class="form-row">
+        <div class="form-group col-6">
+            <label for="gewicht">Gewicht</label> <input type="text" class="form-control" id="gewicht" name="gewicht" placeholder="Gewicht">
+        </div>
+        <div class="form-group col-6">
+            <label for="grosse">Größe</label> <input type="text" class="form-control" id="grosse" name="grosse" placeholder="Größe">
+        </div>
+    </div>
+    <div class="form-row">
+        <div class="form-group col-6">
+            <label for="alter">Alter</label> <input type="text" class="form-control" id="alter" name="alter" placeholder="Alter">
+        </div>
+        <div class="form-group col-6">
+            <label for="geschlecht">Geschlecht</label> <select class="form-control" id="geschlecht" name="grossegeschlecht">
+            <option value="weiblich">Weiblich</option>
+            <option value="maennlich">Männlich</option>
+        </select>
+        </div>
+    </div>
+    <div class="row">
+        <div class="form-group col-6">
+            <div class="row">
+                <label class="col-form-label col-sm-2 pt-0">Aktivität</label>
+                <div class="col-sm-10">
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="aktivitaet" id="mangel" value="1"> <label class="form-check-label" for="mangel"> Bewegungsmangel </label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="aktivitaet" id="massige" value="2"> <label class="form-check-label" for="massige"> Mäßige Aktivität </label>
+                    </div>
+                    <div class="form-check disabled">
+                        <input class="form-check-input" type="radio" name="aktivitaet" id="mittlere" value="3"> <label class="form-check-label" for="mittlere"> Mittlere Aktivität </label>
+                    </div>
+                    <div class="form-check disabled">
+                        <input class="form-check-input" type="radio" name="aktivitaet" id="sehrAktive" value="4"> <label class="form-check-label" for="sehrAktive"> sehr aktive </label>
+                    </div>
+                    <div class="form-check disabled">
+                        <input class="form-check-input" type="radio" name="aktivitaet" id="sportler" value="5"> <label class="form-check-label" for="sportler"> Sportler </label>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="form-group col-6">
+            <div class="row">
+                <label class="col-form-label col-sm-4 pt-0">gewünschtes Ergebnis</label>
+                <div class="col-sm-8">
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="ergebnis" id="zunehmen" value="1"> <label class="form-check-label" for="zunehmen"> zunehmen </label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="ergebnis" id="abnehmen" value="2"> <label class="form-check-label" for="abnehmen"> abnehmen </label>
+                    </div>
+                    <div class="form-check disabled">
+                        <input class="form-check-input" type="radio" name="ergebnis" id="bleiben" value="3"> <label class="form-check-label" for="bleiben">Gewicht lassen</label>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="form-row mt-4">
+        <div class="form-group col-6">
+            <button class="btn btn-danger" type="reset">Reset</button>
+        </div>
+        <div class="form-group col-6 text-right">
+            <button class="btn btn-success" type="submit">Kalorien berechnen</button>
         </div>
     </div>
 </form>
