--- a/app/partials/form.html
+++ b/app/partials/form.html
@@ -1,4 +1,4 @@
-<form class="shadow p-3 mb-5 bg-white rounded">
+<form class="shadow p-3 mb-5 bg-white rounded" novalidate id="form">
     <div class="form-row">
         <div class="form-group col-6">
             <label for="vorname">Vorname</label> <input type="text" class="form-control" id="vorname" name="vorname" placeholder="Vorname">
@@ -20,7 +20,7 @@
             <label for="alter">Alter</label> <input type="text" class="form-control" id="alter" name="alter" placeholder="Alter">
         </div>
         <div class="form-group col-6">
-            <label for="geschlecht">Geschlecht</label> <select class="form-control" id="geschlecht" name="grossegeschlecht">
+            <label for="geschlecht">Geschlecht</label> <select class="form-control" id="geschlecht" name="geschlecht">
             <option value="weiblich">Weiblich</option>
             <option value="maennlich">Männlich</option>
         </select>
