--- a/app/partials/footer.html
+++ b/app/partials/footer.html
@@ -1,5 +1,14 @@
-<script src="js/script.min.js" type="application/javascript"></script>
 <div class="lightbox" style="display: none;"></div>
-<div class="modal" style="display: none;"></div>
+<div class="modal fade show">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-body"></div>
+            <div class="modal-footer">
+                <button class="btn btn-danger hide-modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+<script src="js/script.min.js" type="application/javascript"></script>
 </body>
 </html>
