--- a/app/partials/form.html
+++ b/app/partials/form.html
@@ -21,7 +21,7 @@
         </div>
         <div class="form-group col-6">
             <label for="geschlecht">Geschlecht</label> <select class="form-control" id="geschlecht" name="geschlecht">
-            <option value="weiblich">Weiblich</option>
+            <option value="weiblich" selected>Weiblich</option>
             <option value="maennlich">Männlich</option>
         </select>
         </div>
@@ -32,7 +32,7 @@
                 <label class="col-form-label col-sm-2 pt-0">Aktivität</label>
                 <div class="col-sm-10">
                     <div class="form-check">
-                        <input class="form-check-input" type="radio" name="aktivitaet" id="mangel" value="1"> <label class="form-check-label" for="mangel"> Bewegungsmangel </label>
+                        <input class="form-check-input" type="radio" name="aktivitaet" id="mangel" value="1" checked="checked"> <label class="form-check-label" for="mangel"> Bewegungsmangel </label>
                     </div>
                     <div class="form-check">
                         <input class="form-check-input" type="radio" name="aktivitaet" id="massige" value="2"> <label class="form-check-label" for="massige"> Mäßige Aktivität </label>
@@ -60,7 +60,7 @@
                         <input class="form-check-input" type="radio" name="ergebnis" id="abnehmen" value="2"> <label class="form-check-label" for="abnehmen"> abnehmen </label>
                     </div>
                     <div class="form-check disabled">
-                        <input class="form-check-input" type="radio" name="ergebnis" id="bleiben" value="3"> <label class="form-check-label" for="bleiben">Gewicht lassen</label>
+                        <input class="form-check-input" type="radio" name="ergebnis" id="bleiben" value="3" checked="checked"> <label class="form-check-label" for="bleiben">Gewicht lassen</label>
                     </div>
                 </div>
             </div>
