--- a/app/partials/form.html
+++ b/app/partials/form.html
@@ -60,7 +60,7 @@
                         <input class="form-check-input" type="radio" name="ergebnis" id="abnehmen" value="2"> <label class="form-check-label" for="abnehmen"> abnehmen </label>
                     </div>
                     <div class="form-check disabled">
-                        <input class="form-check-input" type="radio" name="ergebnis" id="bleiben" value="3" checked="checked"> <label class="form-check-label" for="bleiben">Gewicht lassen</label>
+                        <input class="form-check-input" type="radio" name="ergebnis" id="bleiben" value="3" > <label class="form-check-label" for="bleiben">Gewicht lassen</label>
                     </div>
                 </div>
             </div>
