--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,6 +1,6 @@
 {{> partials/head.html}}
 <div class="container mt-5 mb-5">
-    <h1 class="shadow p-3 mb-4 rounded text-center">Anwendung für die Menschen, die sich selbst fit halten müssen/wollen!</h1>
+    <h1 class="shadow p-3 mb-4 rounded text-center top-headline">Anwendung für die Menschen, die sich selbst fit halten müssen/wollen!</h1>
     {{> partials/form.html}}
     {{> partials/result-kallorii.html}}
     {{> partials/table-menu.html}}
