--- a/src/templates/partials/result-kallorii.html
+++ b/src/templates/partials/result-kallorii.html
@@ -7,19 +7,19 @@
                 <div class="row">
                     <div class="col-3">
                         <div class="form-check">
-                            <input class="form-check-input" type="radio" name="menu-tage" id="menu-drei-tage" value="3">
+                            <input class="form-check-input tage" type="radio" name="menu-tage" id="menu-drei-tage" value="3">
                             <label class="form-check-label" for="menu-drei-tage">für 3 Tage</label>
                         </div>
                     </div>
                     <div class="col-3">
                         <div class="form-check">
-                            <input class="form-check-input" type="radio" name="menu-tage" id="menu-fuenf-tage" value="5">
+                            <input class="form-check-input tage" type="radio" name="menu-tage" id="menu-fuenf-tage" value="5">
                             <label class="form-check-label" for="menu-fuenf-tage">für 5 Tage</label>
                         </div>
                     </div>
                     <div class="col-3">
                         <div class="form-check">
-                            <input class="form-check-input" type="radio" name="menu-tage" id="menu-siben-tage" value="7">
+                            <input class="form-check-input tage" type="radio" name="menu-tage" id="menu-siben-tage" value="7">
                             <label class="form-check-label" for="menu-siben-tage">für 7 Tage</label>
                         </div>
                     </div>
