--- a/app/partials/result-kallorii.html
+++ b/app/partials/result-kallorii.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-12">
             <div class="alert alert-primary m-0">
-                <h2>Ergebniss</h2>
+                <h2>Kalorien Ergebniss</h2>
                 <p class="result-text"></p>
                 <div class="row">
                     <div class="col-3">
