--- a/src/templates/partials/result-kallorii.html
+++ b/src/templates/partials/result-kallorii.html
@@ -1,9 +1,18 @@
-<div class="ergebnis-container shadow"  style="display: none;">
+<div class="ergebnis-container shadow" style="display: none;">
     <div class="row">
         <div class="col-12">
             <div class="alert alert-primary m-0">
                 <h2>Kalorien Ergebniss</h2>
                 <p class="result-text"></p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="speiseplan-anfrage shadow mt-5" style="display: none;">
+    <div class="row">
+        <div class="col-12">
+            <div class="alert alert-primary m-0">
+                <h2>Möchten Sie ein Speiseplan</h2>
                 <div class="row">
                     <div class="col-3">
                         <div class="form-check">
