--- a/src/templates/partials/table-menu.html
+++ b/src/templates/partials/table-menu.html
@@ -1,7 +1,7 @@
 <div class="menu-container shadow mt-5"  style="display: none;">
     <div class="row">
         <div class="col-12">
-            <div class="alert alert-primary m-0">
+            <div class="alert m-0">
                 <h2>Ihre Speiseplan</h2>
                 <div class="result-text"></div>
             </div>
