--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,6 +6,43 @@ h1{
     font-size: 2rem;
 }
 
+h4{
+    margin-top: 0.5rem;
+    margin-bottom: 0.75rem;
+}
+
+p{
+    margin-bottom: 0.5rem;
+}
+
+.w-10{
+    width: 10%!important;
+}
+.w-20{
+    width: 20%!important;
+}
+.w-30{
+    width: 30%!important;
+}
+.w-40{
+    width: 40%!important;
+}
+.w-50{
+    width: 50%!important;
+}
+.w-60{
+    width: 60%!important;
+}
+.w-70{
+    width: 70%!important;
+}
+.w-80{
+    width: 80%!important;
+}
+.w-90{
+    width: 90%!important;
+}
+
 .lightbox {
     position: fixed;
     top: 0;
@@ -37,4 +74,10 @@ h1{
 
 .top-headline{
     background-color: #fff3cd;
+}
+
+.menu-item:hover{
+    cursor: pointer;
+    box-shadow: 0 0 2rem rgba(0,0,0,.15);
+    border-radius: 0.25rem;
 }
