--- a/src/templates/partials/js.html
+++ b/src/templates/partials/js.html
@@ -1,1 +1,2 @@
+<script src="js/jquery-3.4.1.min.js" type="application/javascript"></script>
 <script src="js/script.min.js" type="application/javascript"></script>
