--- a/src/templates/partials/table-menu.html
+++ b/src/templates/partials/table-menu.html
@@ -2,11 +2,11 @@
     <div class="row">
         <div class="col-12">
             <div class="alert m-0">
-                <h2>Ihre Speiseplan</h2>
+                <h2>Ihres Speiseplan</h2>
                 <div class="result-text"></div>
                 <div class="print-result row">
                     <div class="col-12 text-right">
-                        <button class="btn btn-success" id="list-generation">Einkaufslist generieren</button>
+                        <button class="btn btn-success" id="list-generation">Einkaufsliste generieren</button>
                         <button class="btn btn-primary" id="menu-print">Das Speiseplan ausdrucken</button>
                     </div>
                 </div>
